syntax = "proto3";

package nana.biz.fiba;

import "nana/sports/match.proto";

enum FibaMatchSvrID {
	SID_FIBAMATCH_UNKNOW = 0x000;
	SID_FIBAMATCH_TIME_REQ = 0x001; //时间请求
	SID_FIBAMATCH_TIME_RES = 0x002; //时间资源

	SID_FIBAMATCH_HEARTBEAT_REQ = 0x901; //心跳检测
	SID_FIBAMATCH_HEARTBEAT_RES = 0x902; //心跳检测
	SID_FIBAMATCH_RESTART_REQ = 0x903; //重启服务
	SID_FIBAMATCH_RESTART_RES = 0x94; //重启服务
	SID_FIBAMATCH_REQ = 0x0010; //
    SID_FIBAMATCH_RES = 0x0011; //
}


message FibaMatchReq {
	int64 time = 8;
	nana.sports.Match match = 2;
}

message FibaMatchRes {
	int64 code = 8;
	nana.sports.Match match = 2;
}


message Request {
	int32 code = 1;
	bytes data = 2;
}

message Result {
	int32 code = 1;
	bytes data = 2;
}
